Add equipment types endpoints and docs
