# src/app/Models/EquipmentType.php
@@ -1,0 +1,14 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Model;
+
+class EquipmentType extends Model
+{
+    protected $table = 'equipment_types';
+
+    protected $fillable = [
+        'name',
+    ];
+}
